--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,56 @@
 @import '~antd/dist/antd.css';
 
+#root {
+	width: 100%;
+	height: 100%;
+}
+.wrap {
+	position: relative;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
 .leftWrap {
 	width: 180px;
 	height: 100vh;
+	overflow: hidden;
+	border-right: 1px solid #b9b9b9
+}
+.rightWrap {
+	position: relative;
+	margin-left: 180px;
+	top: 0;
+	height: 100%;
+}
+.headerWrap {
+	height: 80px;
+	width: 100%;
+}
+.breadcrumb {
+	height: 50px;
+	display: flex;
+	align-items: center;
+	padding-left: 30px;
+}
+.main {
+    position: absolute;
+    top: 85px;
+    bottom: 0px;
+    width: 100%;
+	overflow: hidden;
+	color: #666;
+	background-color: #e5e9f2;
+	box-sizing: border-box;
+	padding: 20px;
+}
+.innerWrap {
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	background: #fff;
+}
+.inner2Wrap {
+	width: calc(100% + 20px);
+	overflow-y: scroll;
+	height: 100%;
 }
