--- a/src/App.css
+++ b/src/App.css
@@ -73,3 +73,130 @@
 .ant-table-thead th {
 	text-align: center!important;
 }
+
+.loadingContainer {
+	width: 100%;
+	height: 100%;
+}
+
+.ball {
+	width: 10px;
+	height: 10px;
+	margin: 10px auto;
+	border-radius: 50px;
+	background: #000;
+}
+
+.ball:nth-child(1) {
+	-webkit-animation: right 1s infinite ease-in-out;
+	-moz-animation: right 1s infinite ease-in-out;
+	animation: right 1s infinite ease-in-out;
+}
+
+.ball:nth-child(2) {
+	-webkit-animation: left 1.1s infinite ease-in-out;
+	-moz-animation: left 1.1s infinite ease-in-out;
+	animation: left 1.1s infinite ease-in-out;
+}
+
+.ball:nth-child(3) {
+	-webkit-animation: right 1.05s infinite ease-in-out;
+	-moz-animation: right 1.05s infinite ease-in-out;
+	animation: right 1.05s infinite ease-in-out;
+}
+
+.ball:nth-child(4) {
+	-webkit-animation: left 1.15s infinite ease-in-out;
+	-moz-animation: left 1.15s infinite ease-in-out;
+	animation: left 1.15s infinite ease-in-out;
+}
+
+.ball:nth-child(5) {
+	-webkit-animation: right 1.1s infinite ease-in-out;
+	-moz-animation: right 1.1s infinite ease-in-out;
+	animation: right 1.1s infinite ease-in-out;
+}
+
+.ball:nth-child(6) {
+	-webkit-animation: left 1.05s infinite ease-in-out;
+	-moz-animation: left 1.05s infinite ease-in-out;
+	animation: left 1.05s infinite ease-in-out;
+}
+
+.ball:nth-child(7) {
+	-webkit-animation: right 1s infinite ease-in-out;
+	-moz-animation: right 1s infinite ease-in-out;
+	animation: right 1s infinite ease-in-out;
+}
+
+@-webkit-keyframes right {
+	0% {
+		-webkit-transform: translate(-15px);
+	}
+	50% {
+		-webkit-transform: translate(15px);
+	}
+	100% {
+		-webkit-transform: translate(-15px);
+	}
+}
+
+@-webkit-keyframes left {
+	0% {
+		-webkit-transform: translate(15px);
+	}
+	50% {
+		-webkit-transform: translate(-15px);
+	}
+	100% {
+		-webkit-transform: translate(15px);
+	}
+}
+
+@-moz-keyframes right {
+	0% {
+		-moz-transform: translate(-15px);
+	}
+	50% {
+		-moz-transform: translate(15px);
+	}
+	100% {
+		-moz-transform: translate(-15px);
+	}
+}
+
+@-moz-keyframes left {
+	0% {
+		-moz-transform: translate(15px);
+	}
+	50% {
+		-moz-transform: translate(-15px);
+	}
+	100% {
+		-moz-transform: translate(15px);
+	}
+}
+
+@keyframes right {
+	0% {
+		transform: translate(-15px);
+	}
+	50% {
+		transform: translate(15px);
+	}
+	100% {
+		transform: translate(-15px);
+	}
+}
+
+@keyframes left {
+	0% {
+		transform: translate(15px);
+	}
+	50% {
+		transform: translate(-15px);
+	}
+	100% {
+		transform: translate(15px);
+	}
+}
